corrections spot-soutenance : opengraph, contraste des noms de catégorie, minification CSS

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -115,7 +115,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #beb45a;
+  background-color: #827742;
   border-radius: 0;
 }
 .nav-pills .nav-link {
